cabal-version:      2.4
name:               haskell-lex-dumper
version:            0.1.0.0
author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-lex-dumper
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                    , pretty-simple
                    , ghc-lib-parser
                    , ghc-lib-parser-ex
    hs-source-dirs:   app
    default-language: Haskell2010
